--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,9 @@
 # misc
 .DS_Store
 .env.local
-.env.development
+.env.developmentBU
 .env.test.local
-.env.production
+.env.productionBU
 
 npm-debug.log*
 yarn-debug.log*
