--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,9 @@
 # misc
 .DS_Store
 .env.local
-.env.developmentBU
+.env.development
 .env.test.local
-.env.productionBU
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
